--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,53 @@
+.navbar {
+  z-index: 101; /* Higher than the sidebar */
+}
+
+.sidebar {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 100; /* Behind the navbar */
+  padding: 48px 0 0; /* Height of navbar */
+  box-shadow: inset -1px 0 0 rgba(0, 0, 0, .1);
+  width: 2.5vw;
+}
+
+/* Space out content a bit */
+.main {
+  padding-top: 20px;
+}
+
+/* Adjustments for the main content area */
+.main .col-md-9.ms-sm-auto.col-lg-10.px-md-4 {
+  flex: 0 0 auto;
+  padding: 0 4rem;
+}
+
+/* Dark Theme Styling */
+body {
+  background-color: #121212; /* Dark background */
+  color: #e0e0e0; /* Light text */
+}
+
+.navbar, .sidebar {
+  background-color: #1e1e1e; /* Darker shade for navigation bars */
+}
+
+.nav-link {
+  color: #e0e0e0; /* Light text for links */
+}
+
+.nav-link:hover {
+  color: #bb86fc; /* Lighter shade for hover */
+}
+
 .App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  min-height: 100vh;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.content {
+  flex-grow: 1;
+  margin-left: 2.5vw; /* Match the width of the sidebar */
 }
